# CasTuner

./: .gitignore  18XX ctrl_B6_B06_001.fcs  CITATION.cff  Fitting hill curves to dose responses.R  Fitting tagBFP downregulation.R  Fitting tagBFP upregulation.R  ODE_KD.R  ODE_REV.R  README.md  Snakefile  config.yaml  crop_pngs.sh  pyproject.toml  requirements.txt  step_1a_fit_upregulation.py  step_1b_fit_downregulation.py  step_1c_fit_hill_curves.py  step_2_simulate_derepression.py  step_3_simulate_repression.py  utils.py
CasTuner-Python/: requirements.txt
Python_results/parameters/: alphamcherry.csv  delays_derepression.csv  delays_repression.csv  half_times_downregulation.csv  half_times_upregulation.csv
R_results/parameters/: Hill_parameters.csv  delays_repression.csv  half_times_upregulation.csv
Rscripts/: Fitting tagBFP downregulation.R  Fitting tagBFP upregulation.R  ODE_KD.R  ODE_REV.R
fcs_files/NFC/: 18XX ctrl_B10_B10_005.fcs  18XX ctrl_B9_B09_004.fcs  description
fcs_files/dose_response_data/: 411_G_A10_A10_010 (2).fcs  411_G_A10_A10_010 (3).fcs  411_G_A10_A10_010.fcs  411_G_A11_A11_011 (2).fcs  411_G_A11_A11_011 (3).fcs  411_G_A11_A11_011.fcs  411_G_A12_A12_012 (3).fcs  411_G_A12_A12_012.fcs  411_G_A2_A02_002 (3).fcs  411_G_A3_A03_003 (3).fcs  411_G_A4_A04_004 (2).fcs  411_G_A4_A04_004 (3).fcs  411_G_A4_A04_004.fcs  411_G_A5_A05_005 (2).fcs  411_G_A5_A05_005.fcs  411_G_A7_A07_007 (2).fcs  411_G_A8_A08_008 (2).fcs  411_G_A8_A08_008 (3).fcs  411_G_A8_A08_008.fcs  411_G_A9_A09_009 (3).fcs  411_N_B10_B10_022 (2).fcs  411_N_B10_B10_022 (3).fcs  411_N_B11_B11_023 (2).fcs  411_N_B11_B11_023.fcs  411_N_B12_B12_024 (2).fcs  411_N_B2_B02_014 (2).fcs  411_N_B2_B02_014 (3).fcs  411_N_B3_B03_015 (2).fcs  411_N_B3_B03_015 (3).fcs  411_N_B4_B04_016 (2).fcs  411_N_B4_B04_016 (3).fcs  411_N_B4_B04_016.fcs  411_N_B5_B05_017.fcs  411_N_B6_B06_018 (2).fcs  411_N_B7_B07_019 (2).fcs  411_N_B7_B07_019 (3).fcs  411_N_B9_B09_021 (3).fcs  411_N_B9_B09_021.fcs  427_G_C10_C10_034.fcs  427_G_C11_C11_035 (3).fcs  (+128 more)
fcs_files/tBFP_downregulation/: 20210813_timecourse_SP411_KD_R1_0_001.fcs  20210813_timecourse_SP411_KD_R1_100_193.fcs  20210813_timecourse_SP411_KD_R1_125_223.fcs  20210813_timecourse_SP411_KD_R1_25_058.fcs  20210813_timecourse_SP411_KD_R1_6_028.fcs  20210813_timecourse_SP411_KD_R1_75_163.fcs  20210813_timecourse_SP411_KD_R2_0_002.fcs  20210813_timecourse_SP411_KD_R2_100_194.fcs  20210813_timecourse_SP411_KD_R2_125_224.fcs  20210813_timecourse_SP411_KD_R2_150_254.fcs  20210813_timecourse_SP411_KD_R2_25_001_059.fcs  20210813_timecourse_SP411_KD_R2_50_001_104.fcs  20210813_timecourse_SP411_KD_R2_6_001_029.fcs  20210813_timecourse_SP411_KD_R2_75_001_164.fcs  20210813_timecourse_SP411_KD_R2_8_001_044.fcs  20210813_timecourse_SP411_KD_R3_125_225.fcs  20210813_timecourse_SP411_KD_R3_150_255.fcs  20210813_timecourse_SP411_KD_R3_25_002_060.fcs  20210813_timecourse_SP411_KD_R3_3_015.fcs  20210813_timecourse_SP411_KD_R3_8_002_045.fcs  20210813_timecourse_SP411_Rev_R1_0_073.fcs  (+31 more)
parameters/: Hill_parameters.csv  alphamcherry.csv  delays_derepression.csv  half_times_downregulation.csv  half_times_upregulation.csv
(+408 files in other folders)
