[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CasTuner-Python-Port"
version = "0.1.0"
description = "Private Python port of the CasTuner R code for modeling gene expression dynamics."
readme = "README.md"
# Critical: keep FlowCytometryTools happy
requires-python = ">=3.9,<3.10"

authors = [
    { name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" },
]

license = { text = "Proprietary" }

dependencies = [
    "pandas",
    "numpy==1.26.4",
    "scipy",
    "plotnine",
    "FlowCytometryTools",
]

[project.urls]
Original-Repository = "https://github.com/EddaSchulz/CasTuner"

[tool.setuptools]
py-modules = [
    "step_1a_fit_upregulation",
    "step_1b_fit_downregulation",
    "step_1c_fit_hill_curves",
    "step_2_simulate_derepression",
    "step_3_simulate_repression"
]
